# shazam-to-youtube

./: .gitignore  README.md  main.py  pyproject.toml  yt_auth.py
.github/workflows/: main.yml
shazam_to_youtube/: main.py  yt_auth.py
