[tool.poetry]
name = "shazam-to-youtube"
version = "0.1.3"
description = "Create a Youtube Playlist from Shazam hits"
packages = [{ include = "shazam_to_youtube" }]
authors = ["Torstein Sørnes <t.soernes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
spotify2ytmusic = "^0.9.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shazam-to-youtube = "shazam_to_youtube.main:run_main"
shazam-to-youtube-yt-auth = "shazam_to_youtube.yt_auth:run_main"

[tool.poetry-pyinstaller-plugin]
version = "latest"
